--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     </head>
     <body>
         <form id="form">
-            <label>Depth image URL <input id="depth-url" value="./depth.png"></label>
+            <label>Depth image URL <input id="depth-url" value="./utah.png"></label>
+            <label>Invert depth values <input id="depth-inverted" type="checkbox" checked></label>
             <label>Depth image width <input id="depth-w" type="number" min="10" value="360"></label>
             <label>Depth image height <input id="depth-h" type="number" min="10" value="240"></label>
             <label>Pattern image width <input id="pattern-w" type="number" min="10" value="80"></label>
             <label>Pattern image height <input id="pattern-h" type="number" min="10" value="240"></label>
-            <label>Depth multiplier <input id="multiplier" type="number" value="1"></label>
+            <label>Depth multiplier <input id="multiplier" type="number" value="1" step="any"></label>
+            <label>Depth offset <input id="offset" type="number" value="0" step="any"></label>
+            <label>Iterations <input id="iterations" type="number" value="1" min="1" max="5"></label>
             <button>Generate</button>
         </form>
 
