--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 
         <section>
             <h2>Output</h2>
+            <details>
+                <summary>Tips and help</summary>
+                <p>If you're having trouble seeing the image there are a few things you can do.</p>
+                <ul>
+                    <li>Reducing the pattern width or making the image smaller will reduce how much you have to defocus.</li>
+                    <li>Try crossing your eyes instead of uncrossing them — if this makes the image appear backwards, you can fix that in the depth settings.</li>
+                    <li>If you're on a glossy screen like a phone or a MacBook, try focussing on an object reflected in the screen — this will appear "behind" the screen, which is where you want your eyes to point.</li>
+                </ul>
+                <p>After you get used to doing it it gets much easier.</p>
+            </details>
             <canvas id="output"></canvas>
         </section>
 
