--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Stereogram maker</h1>
+        <nav>
+            <a href="wtf">How do these work?</a>
+        </nav>
         <form id="form">
             <section>
                 <h2>Step 1. Import depth map image</h2>
