--- a/wtf/index.html
+++ b/wtf/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <nav>
-    <a href="/..">Back to the stereogram generator</a>
+    <a href="..">Back to the stereogram generator</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
 
@@ -83,7 +83,7 @@
 </article>
 
 <nav>
-    <a href="/..">Back to the stereogram generator</a>
+    <a href="..">Back to the stereogram generator</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
 
