add source links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Stereogram maker</h1>
         <nav>
             <a href="wtf">How do these work?</a>
+            <a href="https://github.com/andrew-t/stereograms">Source code</a>
         </nav>
         <form id="form">
             <section>
