--- a/wtf/index.html
+++ b/wtf/index.html
@@ -7,6 +7,7 @@
 
 <nav>
     <a href="..">Back to the stereogram generator</a>
+    <a href="https://github.com/andrew-t/stereograms">Source code</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
 
@@ -84,6 +85,7 @@
 
 <nav>
     <a href="..">Back to the stereogram generator</a>
+    <a href="https://github.com/andrew-t/stereograms">Source code</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
 
