more mobile friendly

--- a/wtf/index.html
+++ b/wtf/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>github.andrewt.net / stereograms / wtf</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
 </head>
 <body>
 
