--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>github.andrewt.net / stereograms</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
     </head>
     <body>
         <h1>Stereogram maker</h1>
