add save button and share card stuff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
+        <meta name="theme-color" content="antiquewhite">
+        <meta property="og:url" content="https://github.andrewt.net/stereograms/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Stereogram Creator">
+        <meta property="og:description" content="Build your own stereograms (and learn how they work)">
+        <meta property="og:image" content="https://github.andrewt.net/stereograms/img/example.png">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@Andrew_Taylor">
+        <meta name="twitter:title" content="Stereogram Creator">
+        <meta name="twitter:description" content="Build your own stereograms (and learn how they work)">
+        <meta name="twitter:image" content="https://github.andrewt.net/stereograms/img/example.png">
+        <meta property="twitter:domain" content="andrewt.net">
     </head>
     <body>
         <h1>Stereogram maker</h1>
@@ -62,6 +74,7 @@
                 <p>After you get used to doing it it gets much easier.</p>
             </details>
             <canvas id="output"></canvas>
+            <a href="#" id="save" download>Save</a>
         </section>
 
         <p>By <a href="https://www.andrewt.net" target="_blank">Andrew</a></p>
