--- a/wtf/index.html
+++ b/wtf/index.html
@@ -4,6 +4,18 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
+    <meta name="theme-color" content="antiquewhite">
+    <meta property="og:url" content="https://github.andrewt.net/stereograms/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Stereogram Explainer">
+    <meta property="og:description" content="Learn how stereograms work (and make your own)">
+    <meta property="og:image" content="https://github.andrewt.net/stereograms/img/example.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Andrew_Taylor">
+    <meta name="twitter:title" content="Stereogram Explainer">
+    <meta name="twitter:description" content="Learn how stereograms work (and make your own)">
+    <meta name="twitter:image" content="https://github.andrewt.net/stereograms/img/example.png">
+    <meta property="twitter:domain" content="andrewt.net">
 </head>
 <body>
 
