explain the repeat checkbox

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <summary>Tips and help</summary>
                     <p>This is the image that will repeat across the final picture. It should be the same height as your scene image, and generally about a quarter to a tenth of the width, depending on what settings you plan to use later.</p>
                     <p>If you leave it blank, we can generate a noise pattern, which works pretty well. Otherwise you can import a custom image. Bear in mind that the image needs to have lots of fine detail so that your eye can pick out precisely where the repeating patterns are — if it doesn't have this, turn the noise on and we can add some noise to act as fine detail. Set the noise to about 0.5 to get enough noise to work without overwhelming the image.</p>
+                    <p>You can also use any small image by tiling it vertically as well as horizontally — to do so use the "repeat image" checkbox.</p>
                 </details>
                 <image-getter id="pattern" legend="Pattern image" width="100" height="240" noise="1"></image-getter>
             </section>
