--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>github.andrewt.net / stereograms</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="view-stereogram.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
         <meta name="theme-color" content="antiquewhite">
@@ -10,18 +11,19 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Stereogram Creator">
         <meta property="og:description" content="Build your own stereograms (and learn how they work)">
-        <meta property="og:image" content="https://github.andrewt.net/stereograms/img/example.png">
+        <meta property="og:image" content="https://github.andrewt.net/stereograms/example/example.png">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@Andrew_Taylor">
         <meta name="twitter:title" content="Stereogram Creator">
         <meta name="twitter:description" content="Build your own stereograms (and learn how they work)">
-        <meta name="twitter:image" content="https://github.andrewt.net/stereograms/img/example.png">
+        <meta name="twitter:image" content="https://github.andrewt.net/stereograms/example/example.png">
         <meta property="twitter:domain" content="andrewt.net">
     </head>
     <body>
         <h1>Stereogram maker</h1>
         <nav>
             <a href="wtf">How do these work?</a>
+            <a href="examples">Examples</a>
             <a href="https://github.com/andrew-t/stereograms">Source code</a>
         </nav>
         <form id="form">
@@ -59,7 +61,7 @@
                 </ul>
                 <p>After you get used to doing it it gets much easier.</p>
             </details>
-            <view-stereogram legend="Output" id="viewer"></view-stereogram>
+            <view-stereogram legend="Output" id="viewer" class="no-width"></view-stereogram>
         </section>
 
         <p>By <a href="https://www.andrewt.net" target="_blank">Andrew</a></p>
