--- a/wtf/index.html
+++ b/wtf/index.html
@@ -9,18 +9,19 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Stereogram Explainer">
     <meta property="og:description" content="Learn how stereograms work (and make your own)">
-    <meta property="og:image" content="https://github.andrewt.net/stereograms/img/example.png">
+    <meta property="og:image" content="https://github.andrewt.net/stereograms/examples/example.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Andrew_Taylor">
     <meta name="twitter:title" content="Stereogram Explainer">
     <meta name="twitter:description" content="Learn how stereograms work (and make your own)">
-    <meta name="twitter:image" content="https://github.andrewt.net/stereograms/img/example.png">
+    <meta name="twitter:image" content="https://github.andrewt.net/stereograms/examples/example.png">
     <meta property="twitter:domain" content="andrewt.net">
 </head>
 <body>
 
 <nav>
     <a href="..">Back to the stereogram generator</a>
+    <a href="../examples/">Example stereograms</a>
     <a href="https://github.com/andrew-t/stereograms">Source code</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
@@ -99,6 +100,7 @@
 
 <nav>
     <a href="..">Back to the stereogram generator</a>
+    <a href="../examples/">Example stereograms</a>
     <a href="https://github.com/andrew-t/stereograms">Source code</a>
     <a href="https://www.andrewt.net">The rest of my website</a>
 </nav>
