wire up generator controls to view widget's new settings

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <p>You can also use any small image by tiling it vertically as well as horizontally — to do so use the "repeat image" checkbox.</p>
                 </details>
                 <image-getter id="pattern" legend="Pattern image" width="100" height="240" noise="1"></image-getter>
+                <label><span>Repeat pattern image</span><input id="repeat-pattern" type="checkbox"></label>
             </section>
         </form>
 
