redirect to main site

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>github.andrewt.net / stereograms</title>
+        <title>andrewt.net / stereograms</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" type="text/css" href="view-stereogram.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
         <meta name="theme-color" content="antiquewhite">
-        <meta property="og:url" content="https://github.andrewt.net/stereograms/">
+        <meta property="og:url" content="https://www.andrewt.net/stereograms/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Stereogram Creator">
         <meta property="og:description" content="Build your own stereograms (and learn how they work)">
-        <meta property="og:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+        <meta property="og:image" content="https://www.andrewt.net/stereograms/examples/example.png">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@Andrew_Taylor">
         <meta name="twitter:title" content="Stereogram Creator">
         <meta name="twitter:description" content="Build your own stereograms (and learn how they work)">
-        <meta name="twitter:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+        <meta name="twitter:image" content="https://www.andrewt.net/stereograms/examples/example.png">
         <meta property="twitter:domain" content="andrewt.net">
+        <script>
+            if (location.host == "github.andrewt.net")
+                location = "https://www.andrewt.net/stereograms";
+        </script>
     </head>
     <body>
         <h1>Stereogram maker</h1>
