--- a/examples/index.html
+++ b/examples/index.html
@@ -1,22 +1,26 @@
 <html>
 <head>
-    <title>github.andrewt.net / stereograms / examples</title>
+    <title>andrewt.net / stereograms / examples</title>
     <link rel="stylesheet" type="text/css" href="../wtf/styles.css">
     <link rel="stylesheet" type="text/css" href="../view-stereogram.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
     <meta name="theme-color" content="antiquewhite">
-    <meta property="og:url" content="https://github.andrewt.net/stereograms/">
+    <meta property="og:url" content="https://www.andrewt.net/stereograms/examples">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Example stereograms">
     <meta property="og:description" content="A page of stereograms, plus a tool to make your own and an explainer of how they work">
-    <meta property="og:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+    <meta property="og:image" content="https://www.andrewt.net/stereograms/examples/example.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Andrew_Taylor">
     <meta name="twitter:title" content="Example stereograms">
     <meta name="twitter:description" content="A page of stereograms, plus a tool to make your own and an explainer of how they work">
-    <meta name="twitter:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+    <meta name="twitter:image" content="https://www.andrewt.net/stereograms/examples/example.png">
     <meta property="twitter:domain" content="andrewt.net">
+        <script>
+            if (location.host == "github.andrewt.net")
+                location = "https://www.andrewt.net/stereograms/examples";
+        </script>
 </head>
 <body>
 
