--- a/wtf/index.html
+++ b/wtf/index.html
@@ -1,21 +1,25 @@
 <html>
 <head>
-    <title>github.andrewt.net / stereograms / wtf</title>
+    <title>andrewt.net / stereograms / wtf</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="fediverse:creator" content="@andrewt@mathstodon.xyz">
     <meta name="theme-color" content="antiquewhite">
-    <meta property="og:url" content="https://github.andrewt.net/stereograms/">
+    <meta property="og:url" content="https://www.andrewt.net/stereograms/wtf/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Stereogram Explainer">
     <meta property="og:description" content="Learn how stereograms work (and make your own)">
-    <meta property="og:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+    <meta property="og:image" content="https://www.andrewt.net/stereograms/examples/example.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Andrew_Taylor">
     <meta name="twitter:title" content="Stereogram Explainer">
     <meta name="twitter:description" content="Learn how stereograms work (and make your own)">
-    <meta name="twitter:image" content="https://github.andrewt.net/stereograms/examples/example.png">
+    <meta name="twitter:image" content="https://www.andrewt.net/stereograms/examples/example.png">
     <meta property="twitter:domain" content="andrewt.net">
+    <script>
+        if (location.host == "github.andrewt.net")
+            location = "https://www.andrewt.net/stereograms";
+    </script>
 </head>
 <body>
 
