--- a/wtf/index.html
+++ b/wtf/index.html
@@ -38,21 +38,21 @@
 
 <p>Human depth perception has a few factors, for example parallax motion and where we have to focus to see something sharply, but perhaps the most important (certainly for this) is binocular vision — that is, how our left and right eyes see slightly different images. You can see this easily (assuming you have two working eyes) by holding up your thumb in front of you and then alternately closing each eye. You should notice the thumb appear to move compared to the background. This might be a surprise if you haven’t done it before, but it’s not hard to visualise why this happens. (If you’re familiar with binocular vision then you can skip this section.)</p>
 
-<img src="image5.png" alt="A diagram of a thumb in front of a background. Behind it are two eyes. An arrow goes from each eye, through the thumb, to point to the part of the background that eye can't see. Because the arrows cross at the thumb, they end up in different places.">
+<signal-svg id="sc1" background="#eee" aria-label="A diagram of a thumb in front of a background. Behind it are two eyes. An arrow goes from each eye, through the thumb, to point to the part of the background that eye can't see. Because the arrows cross at the thumb, they end up in different places."></signal-svg>
 
 <p>This helps us see depth, because the angle between the two lines in this diagram depends on how far away the object is:</p>
 
-<img src="image9.png" alt="A similar diagram to before, but without the background. instead, there is a second thumb behind the first. It's clear that the arrows from the eyes to the nearby object form a much wider angle than the ones from the eyes to the far away object. This is because the distance between the eyes is the same, but the distance to the object changes, resulting in one long, thin triangle and one short, squat one.">
+<signal-svg id="sc2" background="#eee" aria-label="A similar diagram to before, but without the background. instead, there is a second thumb behind the first. It's clear that the arrows from the eyes to the nearby object form a much wider angle than the ones from the eyes to the far away object. This is because the distance between the eyes is the same, but the distance to the object changes, resulting in one long, thin triangle and one short, squat one."></signal-svg>
 
 <p>It’s possible to trick the brain’s binocular vision. All you need is any repeating pattern. A brick wall, say, or some lined paper. The aim is to get each eye to focus on a different iteration of the repeating pattern.</p>
 
 <p>In this example, each eye is focussed on a different light patch of the pattern — but your brain assumes they’re looking at the same thing, because all the light patches look more or less identical and normally when both eyes see the same thing it means they’re looking at the same object. So your brain does the mental geometry and works out that if the eyes are looking in these directions and seeing the same object, then the only place it could possibly be is here:</p>
 
-<img src="image4.png" alt="Two eyes looking at a repeating pattern. Lines come from each eye, but land on different iterations of the repeating pattern. The brain would see the image where the lines cross — but they don't. So we continue the lines through the repeating pattern to a point behind it. This is where your brain sees the object when you do this.">
+<signal-svg id="sc3" background="#eee" aria-label="Two eyes looking at a repeating pattern. Lines come from each eye, but land on different iterations of the repeating pattern. The brain would see the image where the lines cross — but they don't. So we continue the lines through the repeating pattern to a point behind it. This is where your brain sees the object when you do this."></signal-svg>
 
 <p>You can also make the object appear closer than it actually is by doing the same thing the other way around:</p>
 
-<img src="image8.png" alt="The opposite case — this time the lines come from the eyes to different parts of the repeating pattern, but in such a way that they cross en route. The result is that the brain sees the object in front of the repeating pattern, where the lines cross.">
+<signal-svg id="sc4" background="#eee" aria-label="The opposite case — this time the lines come from the eyes to different parts of the repeating pattern, but in such a way that they cross en route. The result is that the brain sees the object in front of the repeating pattern, where the lines cross."></signal-svg>
 </section>
 
 <section>
@@ -60,7 +60,8 @@
 
 <p>Most 3D images work by showing each eye an entirely different image. 3D glasses and 3D films work by putting both images in the same place and using polarisation or coloured filters to make sure that each eye only sees one of the images. Virtual reality and Victorian stereoscopes work by putting the images very close to the eyes so that each eye only sees one of them, and using lenses to make the images appear to be at a more normal viewing distance.</p>
 
-<img src="image6.png" alt="Two eyes look at a 3D-glasses image. The left, blue eye looks at a blue feature of the image, and the right, red eye looks at the red version of the same image. Again, the lines cross in front of the page, resulting in a 3D effect.">
+<signal-svg id="sc5" background="#eee" aria-label="Two eyes look at a 3D-glasses image. The left, blue eye looks at a blue feature of the image, and the right, red eye looks at the red version of the same image. Again, the lines cross in front of the page, resulting in a 3D effect."></signal-svg>
+</section>
 
 <p>Clearly, by printing the same part of the image at different positions in the red and blue versions of the image, we can control where the crossing point is, and therefore where you perceive objects to be in 3D space.</p>
 
@@ -71,7 +72,7 @@
 <h2>Single-image stereograms</h2>
 <p>Single-image stereograms, or autostereograms, also known as Magic Eye pictures, Stare-E-Os, and all manner of other names, have a bit of a problem, which is that they have to show each eye the same picture and still achieve the same effect. They do this by showing a repeating pattern, and varying the width of that pattern.</p>
 
-<img src="image2.png" alt="Two eyes look at a repeating pattern where the width varies as you go along. Just like in the earlier example, the lines don't cross until after they pass through the object, meaning the object looks further away than it is. But because the width of the pattern changes, the intensity of the effect changes with it, and the images of each part of the pattern appear at different depths.">
+<signal-svg id="sc6" background="#eee" aria-label="Two eyes look at a repeating pattern where the width varies as you go along. Just like in the earlier example, the lines don't cross until after they pass through the object, meaning the object looks further away than it is. But because the width of the pattern changes, the intensity of the effect changes with it, and the images of each part of the pattern appear at different depths."></signal-svg>
 
 <p>In this example, we’ve uncrossed our eyes slightly to focus behind the repeating pattern, as you do when looking at an autostereogram. This tricks the brain into thinking that the left eye’s image of block two and the right eye’s image of block three are in fact the same object; similarly the left eye’s image of block three and the right eye’s image of block four, and so on. Because the pattern repeats, this looks plausible enough that you can hold onto the illusion, albeit with a little effort.</p>
 
@@ -135,6 +136,8 @@
         </p>
     </section>
 </article>
+
+<script src="main.js" type="module"></script>
 
 </body>
 </html>
