--- a/wtf/index.html
+++ b/wtf/index.html
@@ -33,6 +33,8 @@
 <article>
 <h1>How stereograms work</h1>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vVsXtMpsxjA?si=EJKdgWwoUGT3WsZ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <section>
 <h2>Normal 3D vision</h2>
 
