update copy to match new diagrams

--- a/wtf/index.html
+++ b/wtf/index.html
@@ -38,7 +38,7 @@
 <section>
 <h2>Normal 3D vision</h2>
 
-<p>Human depth perception has a few factors, for example parallax motion and where we have to focus to see something sharply, but perhaps the most important (certainly for this) is binocular vision — that is, how our left and right eyes see slightly different images. You can see this easily (assuming you have two working eyes) by holding up your thumb in front of you and then alternately closing each eye. You should notice the thumb appear to move compared to the background. This might be a surprise if you haven’t done it before, but it’s not hard to visualise why this happens. (If you’re familiar with binocular vision then you can skip this section.)</p>
+<p>Human depth perception has a few factors, for example parallax motion, and how much we have to focus to see something sharply, but perhaps the most important (certainly for this) is binocular vision — that is, how our left and right eyes see slightly different images. You can see this easily (assuming you have two working eyes) by holding up your thumb in front of you and then alternately closing each eye. You should notice the thumb appear to move compared to the background. This might be a surprise if you haven’t done it before, but it’s not hard to visualise why this happens. (If you’re familiar with binocular vision then you can skip this section.)</p>
 
 <signal-svg id="sc1" background="#eee" aria-label="A diagram of a thumb in front of a background. Behind it are two eyes. An arrow goes from each eye, through the thumb, to point to the part of the background that eye can't see. Because the arrows cross at the thumb, they end up in different places."></signal-svg>
 
@@ -48,7 +48,7 @@
 
 <p>It’s possible to trick the brain’s binocular vision. All you need is any repeating pattern. A brick wall, say, or some lined paper. The aim is to get each eye to focus on a different iteration of the repeating pattern.</p>
 
-<p>In this example, each eye is focussed on a different light patch of the pattern — but your brain assumes they’re looking at the same thing, because all the light patches look more or less identical and normally when both eyes see the same thing it means they’re looking at the same object. So your brain does the mental geometry and works out that if the eyes are looking in these directions and seeing the same object, then the only place it could possibly be is here:</p>
+<p>In this example, we’re looking at a repeating row of dots, and each eye is focussed on a different dot — but your brain assumes they’re looking at the same one, because all the dots look more or less identical, and normally when both eyes see the same thing it means they’re looking at the same object. So your brain does the mental geometry and works out that if the eyes are looking in these directions and seeing the same object, then the only place it could possibly be is here:</p>
 
 <signal-svg id="sc3" background="#eee" aria-label="Two eyes looking at a repeating pattern. Lines come from each eye, but land on different iterations of the repeating pattern. The brain would see the image where the lines cross — but they don't. So we continue the lines through the repeating pattern to a point behind it. This is where your brain sees the object when you do this."></signal-svg>
 
@@ -76,11 +76,11 @@
 
 <signal-svg id="sc6" background="#eee" aria-label="Two eyes look at a repeating pattern where the width varies as you go along. Just like in the earlier example, the lines don't cross until after they pass through the object, meaning the object looks further away than it is. But because the width of the pattern changes, the intensity of the effect changes with it, and the images of each part of the pattern appear at different depths."></signal-svg>
 
-<p>In this example, we’ve uncrossed our eyes slightly to focus behind the repeating pattern, as you do when looking at an autostereogram. This tricks the brain into thinking that the left eye’s image of block two and the right eye’s image of block three are in fact the same object; similarly the left eye’s image of block three and the right eye’s image of block four, and so on. Because the pattern repeats, this looks plausible enough that you can hold onto the illusion, albeit with a little effort.</p>
+<p>In this example, we’ve uncrossed our eyes slightly to focus behind the repeating pattern, as you do when looking at an autostereogram. This tricks the brain into thinking that the left eye’s image of the leftmost dot and the right eye’s image of the second dot are in fact the same object; similarly the left eye’s image of the second dot and the right eye’s image of the third dot, and so on. Because the pattern repeats, this looks plausible enough that you can hold onto the illusion, albeit with a little effort.</p>
 
 <p>By varying the width of the pattern, we’ve made each of these images appear at a different depth. (They’re also moved horizontally, but we can ignore that — that effect is really small in a real stereogram and only looks large here because the geometry is very distorted so you can clearly see the differences.)</p>
 
-<p>The image of blocks 2 and 3 is closest to the observer, because blocks 2 and 3 are closest together. Similarly, blocks 4 and 5 are further apart, resulting in their shared image being further from the observer. By stacking lots of horizontal repeating patterns on top of each other like this, you can make a full 2D image, which will appear to vary in distance from you when you look through it in this way. That’s exactly what a stereogram is.</p>
+<p>The image formed by the leftmost pair of dots is closest to the observer, because those dots are closest together. Similarly, the rightmost pair of dots are further apart, resulting in their shared image being further from the observer. By stacking lots of horizontal repeating patterns on top of each other like this, you can make a full 2D image, which will appear to vary in distance from you when you look through it in this way. That’s exactly what a stereogram is.</p>
 </section>
 
 <section>
